--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,5 @@
 /*@import './base.css'; */
+@import 'https://www.nerdfonts.com/assets/css/webfont.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
